@@ -11,9 +11,12 @@ import org.gradle.api.tasks.diagnostics.DependencyReportTask
 import org.gradle.api.tasks.javadoc.Javadoc
 import org.gradle.api.tasks.testing.Test
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
 import org.gradle.external.javadoc.StandardJavadocDocletOptions
 import org.gradle.jvm.toolchain.JavaLanguageVersion
+import org.gradle.kotlin.dsl.configure
 import org.gradle.kotlin.dsl.getByType
+import org.gradle.kotlin.dsl.register
 import org.gradle.kotlin.dsl.withType
 
 class KoraJavaConventionPlugin : Plugin<Project> {
@@ -22,7 +25,7 @@ class KoraJavaConventionPlugin : Plugin<Project> {
             return
         }
 
-        project.plugins.apply("java-library")
+        project.pluginManager.apply("java-library")
 
         val catalogs = project.extensions.getByType<VersionCatalogsExtension>()
         val libs = catalogs.named("libs")
@@ -32,7 +35,7 @@ class KoraJavaConventionPlugin : Plugin<Project> {
         val javaVersionAsInt = javaVersionStr.toInt()
         val javaVersionEnum = JavaVersion.toVersion(javaVersionStr)
 
-        project.extensions.configure(JavaPluginExtension::class.java) {
+        project.extensions.configure<JavaPluginExtension> {
             toolchain {
                 languageVersion.set(JavaLanguageVersion.of(javaVersionAsInt))
             }
@@ -70,41 +73,6 @@ class KoraJavaConventionPlugin : Plugin<Project> {
             }
         }
 
-        project.tasks.withType<Test>().configureEach {
-            jvmArgs(
-                "-XX:+TieredCompilation",
-                "-XX:TieredStopAtLevel=1",
-                "-XX:FlightRecorderOptions=stackdepth=1024",
-                "--enable-preview",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
-            )
-            useJUnitPlatform()
-            testLogging {
-                showStandardStreams = false
-                showCauses = true
-                showExceptions = true
-                showStackTraces = true
-                events("failed")
-                exceptionFormat = TestExceptionFormat.FULL
-            }
-        }
-
-        project.pluginManager.withPlugin("java-library") {
-            libs.findLibrary("jspecify").ifPresent { project.dependencies.add("api", it) }
-            project.dependencies.add("testImplementation", project.dependencies.project(mapOf("path" to ":internal:test-logging")))
-            libs.findLibrary("junit.jupiter").ifPresent { project.dependencies.add("testImplementation", it) }
-            libs.findLibrary("mockito.core").ifPresent { project.dependencies.add("testImplementation", it) }
-            libs.findLibrary("assertj").ifPresent { project.dependencies.add("testImplementation", it) }
-        }
-
-        project.tasks.register("allDeps", DependencyReportTask::class.java)
+        project.tasks.register<DependencyReportTask>("allDeps")
     }
 }
